--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  convex_bottom_bar: ^2.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
