--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  intl: ^0.17.0
+  hijri: ^2.0.3
+  http: ^0.13.1
+  url_launcher: ^6.0.3
+  share: ^2.0.1
 
 dev_dependencies:
   flutter_test:
