--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   http: ^0.13.1
   url_launcher: ^6.0.3
   share: ^2.0.1
+#  geolocation: ^1.1.2
+
 
 dev_dependencies:
   flutter_test:
