--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,9 @@ dependencies:
   geolocator: ^5.3.1
   geocoder: ^0.2.1
   shared_preferences: ^2.0.5
-  
+  firebase_core: ^1.0.2
+  firebase_analytics: ^7.1.1
+
 
 
 
